patch:(github action): change release date format

--- a/.releaserc
+++ b/.releaserc
@@ -56,6 +56,9 @@
               "hidden": true
             }
           ]
+        },
+        "writerOpts": {
+          "date": 'dd-mm-yyyy'
         }
       }
     ],
