--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,12 @@
     "autoload": {
         "psr-4": {"App\\": "src/"}
     },
-    "require": {}
+    "require": {
+        "symfony/routing": "^5.2",
+        "symfony/http-foundation": "^5.2",
+        "symfony/http-kernel": "^5.2"
+    },
+    "require-dev": {
+        "symfony/var-dumper": "^5.2"
+    }
 }
