--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,11 @@
         "symfony/http-kernel": "^5.2",
         "ext-pdo": "*",
         "phpmailer/phpmailer": "^6.3",
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5",
+        "symfony/dependency-injection": "^5.2",
+        "symfony/yaml": "^5.2",
+        "symfony/config": "^5.2",
+        "symfony/framework-bundle": "^5.2"
     },
     "require-dev": {
         "symfony/var-dumper": "^5.2"
